--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button[type="submit"] {
   padding: 10px 20px;
   font-weight: bold;
   font-size: 2rem;
-  background-color: hsl(122, 39%, 50%);
+  background-color: hsl(217 100% 60%);
   color: white;
   border: none;
   border-radius: 5px;
@@ -33,7 +33,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: hsl(122, 39%, 40%);
+  background-color: hsl(217 100% 47.5%);
 }
 
 .card {
